<resources>
    <string name="app_name">Food Fit</string>
    <string name="my_website">www.denmau.me</string>
    <string name="splash_screen_image">splash screen image</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="get_started">GET STARTED!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="resetPassword">Reset password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="haveAccount">I HAVE AN ACCOUNT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterEmailResetPass">input your email to reset password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="recipe_image">recipe image</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search_recipes">Search Recipes</string>
    <string name="title_random_recipes">Random Recipes</string>
    <string name="search_hint">enter to search</string>
    <string name="app_label">search recipe</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="ingredients">Ingredients</string>
    <string name="img_of_recipe">image of recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="vegetarian">vegeterian</string>
    <string name="mins">mins</string>
    <string name="instructions">Instructions</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="description1">We compute the nutritional information for recipes automatically using a powerful algorithm. With this information, you can find individual recipes or even create entire meal plans that satisfy your dietary goals</string>
    <string name="description2">We automatically analyze recipes to check for ingredients that contain common allergens, such as wheat, dairy, eggs, soy, nuts, etc. We also determine whether a recipe is vegan, vegetarian, Paleo friendly, Whole30 compliant, and more</string>
    <string name="description3">We are more than just a recipe. We provide solutions to make any food-related vision a reality.</string>
    <string name="SpoonacularApiProviderShoutOut">Food and Nutrition data provided by Spoonacular API</string>
    <string name="spoonaluar_web_link">https://www.spoonacular.com/food-api</string>
    <string name="app_developed_by">App Deveveloped by Dennis Kamau</string>

</resources>