<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.MainActivity"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/splashScreenImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/splash_screen_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/splash_screen_image" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@id/splashScreenImage"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/app_green"
        android:fontFamily="@font/comfortaa"
        android:textFontWeight="700"
        />

    <TextView
        android:id="@+id/txtMyWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/my_website"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/comfortaa"
        />

</RelativeLayout>